Enhance BLUESKY.md, README.md, and bluesky.ts to implement a hybrid approach for direct messaging functionality using both TypeScript and Python. Updated documentation to detail the integration of a Python script for sending direct messages, including setup requirements and installation instructions. Modified the sendDirectMessage function to execute the Python script for message handling, ensuring robust communication with the Bluesky API. Updated webhook logic to handle private messages effectively with improved error handling and logging.

--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts",
+    "dev": "ts-node src/index.ts",
     "lint": "eslint . --ext .ts",
-    "prettier": "prettier --write ."
+    "prettier": "prettier --write .",
+    "python-setup": "pip install atproto"
   },
   "keywords": [
     "genesys-cloud",
